--- a/manifest.json
+++ b/manifest.json
@@ -902,6 +902,18 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "home/techguides/automated-factories.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/techguides/automated-factories.html",
+          "hash": "JxLH8anfE+KcXC4q3CwOBA=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "home/techguides/clone-environment.md",
       "output": {
         ".html": {
@@ -6525,15 +6537,12 @@
       "version": ""
     },
     {
-      "log_codes": [
-        "InvalidFileLink"
-      ],
       "type": "Toc",
       "source_relative_path": "home/toc.yml",
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "H4A059MHUI4L4II3vhaYPA=="
+          "hash": "dMDup88Rom9ipSR8Jn5mqQ=="
         }
       },
       "is_incremental": false,
@@ -6736,16 +6745,16 @@
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
+        "ManagedReferenceDocumentProcessor": {
+          "can_incremental": false,
+          "incrementalPhase": "build"
+        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
-          "can_incremental": false,
-          "incrementalPhase": "build"
-        },
-        "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build"
         },
